istio/auth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: greeter-mtls
  namespace: demos
spec:
  mtls:
    mode: STRICT
