istio/mtls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: greeter-mtls
  namespace: demos
spec:
  host: greeter.demos.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
